# scat_lib

./: .CASSCF_with_CI.py.swp  .coverage  .gitignore  .readthedocs.yaml  1rdm_csf_test.txt  1rdm_pyscf.txt  1rdm_test_total_pyscf.txt  2rdm.txt  2rdm_csf_test.txt  2rdm_pyscf.txt  2rdm_test_total_pyscf.txt  321gci_CASCI.txt  File_creator_molden.py  File_creator_pyscf.py  MANIFEST.in  README.md  Test.ipynb  __init__.py  ci_to_2rdm.py  csf_test  csf_test.molden  fit_utils.py  li_f.xyz  molden.molden  molden_reader_nikola_pyscf.py  pyproject.toml  reduced_ci.py  scat_calc.py  scat_lib.py  test_total  test_total_pyscf  test_total_pyscf.molden
.claude/: settings.local.json
docs/: conf.py  gas_iam_guide.rst  iam_guide.rst  index.rst  modules.rst  reduced_ci_explicit.rst  requirements.txt  scat_lib.rst
scat_lib/: __init__.py  fit_utils.py  molden_reader_nikola_pyscf.py  rdm_tools.py  reduced_ci.py  scat_calc.py  settings.py
scat_lib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scat_lib/gas_iam/: README.md  __init__.py  __main__.py  cm.py  constants.py  geometry.py  pyproject.toml  pyscf_bridge.py  qgrid.py  scattering.py
scat_lib/gas_iam/data/: isfl.txt
scat_lib/gas_iam/gas_iam_f90/: __init__.py  constants.py  geometry.py
scat_lib/gas_iam/gas_iam_f90/providers/: xraydb_provider.py
scat_lib/gas_iam/providers/: __init__.py
scat_lib/iam/: __init__.py  constants.py  electron.py  form_factors.py  gas.py  kinematics.py  structure.py
scat_lib/iam/example/: example_f90_parity.py  example_gas_CO.py
scat_lib/iam/providers/: xraydb_provider.py
scat_lib/pyscf_scat/: CASSCF_with_CI.py  __init__.py  ci_to_2rdm.py  fit_utils.py  make_zcontraction_files.py  makerdm.py  molden_reader_nikola_morder.py  reduced_ci.py  scat_calc.py
src/: Integrals.f90  Main.f90  Reader.f90  Total_scattering_j0_groups_fast.f90  one_rdm.f90  p0_cases.f90
